# wibu-downloader

./: .gitignore  Changelog.md  README.md  pyproject.toml  ruff.toml  setup.cfg
mpv-scripts/: animein.lua
test/: naruto.txt  wanpis.txt  wanpis.url
yt_dlp_plugins/extractor/: animein.py  animein_episode.py  animein_search.py  animein_web.py  animeku.py
yt_dlp_plugins/postprocessor/: autosorter.py  clean_name.py  simplemtime.py
